[tool.poetry]
name = "main-mmai-chatbot"
version = "0.0.1"
description = ""
authors = ["Rushir Bhavsar <bhavsarrushir@gmail.com"]
license = "Apache 2.0"
packages = [{include = "streamlit_agent"}]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
langchain = ">=0.2.4"
openai = ">=1.34.0"
duckduckgo-search = ">4.0"
pypdf = "^3.12.2"
sentence-transformers = "^2.2.2"
torch = ">=2.0.0, !=2.0.1"
tabulate = "^0.9.0"
streamlit-feedback = "^0.0.9"
streamlit-extras = "^0.4.3"
langchain-experimental = "^0.0.60"
langchain-core = "^0.2.7"
langchain-groq = "^0.1.5"
langchain-openai = "^0.1.8"
langchain-pinecone = "^0.1.1"
streamlit = ">=1.26"
docarray = "^0.38.0"
hnswlib = "^0.7.0"
langchain-community = "^0.2.4"
langchain-openai = "^0.1.8"
numexpr = "^2.8.8"
langchainhub = "^0.1.14"
dotenv = "^0.19.0"
pypdf2 = "^1.26.0"
SQLAlchemy = ">=2.0.30"
PyPDF2 = ">=3.0.1"
Faker = ">=25.8.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
mypy = "^1.4.1"
pre-commit = "^3.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
